<resources>
    <string name="app_name">DroidPW</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="strength_label">PW length</string>
    <string name="include">PW include</string>
    <string name="radio_16">16 xters</string>
    <string name="radio_32">32 xters</string>
    <string name="radio_64">64 xters</string>
    <string name="nums_incl">Number</string>
    <string name="syms_incl">Symbol</string>
    <string name="alphas_incl">Casing(a-Z)</string>
    <string name="save_pw_pref">Save above settings</string>
    <string name="pw_string">Your PW shows here</string>
</resources>
