<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        android:padding="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/strengthView">

        <RadioButton
            android:id="@+id/radio_16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClick"
            android:text="@string/radio_16"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radio_32"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClick"
            android:text="@string/radio_32"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radio_64"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClick"
            android:text="@string/radio_64"
            android:textSize="20sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/strengthView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/strength_label"
        android:textAlignment="center"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/includeView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/include"
        android:textAlignment="center"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <CheckBox
        android:id="@+id/numsCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="16dp"
        android:text="@string/nums_incl"
        android:textSize="15sp"
        android:onClick="onCheckboxClick"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/includeView" />

    <CheckBox
        android:id="@+id/symbolsCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="onCheckboxClick"
        android:text="@string/syms_incl"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@+id/alphasCheckBox"
        app:layout_constraintTop_toBottomOf="@+id/includeView" />

    <CheckBox
        android:id="@+id/alphasCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="40dp"
        android:text="@string/alphas_incl"
        android:textSize="15sp"
        android:onClick="onCheckboxClick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/includeView" />

    <TextView
        android:id="@+id/pwstringView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/pw_string"
        android:textAlignment="center"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textIsSelectable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/floatingActionButton" />

    <ImageView
        android:id="@+id/copyView"
        android:layout_width="48dp"
        android:layout_height="33dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="@+id/pwstringView"
        app:layout_constraintStart_toStartOf="@+id/pwstringView"
        app:layout_constraintTop_toBottomOf="@+id/pwstringView"
        app:srcCompat="@drawable/ic_content"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/includeView"
        app:srcCompat="@android:drawable/checkbox_on_background" />

</androidx.constraintlayout.widget.ConstraintLayout>